fix gap in filter controls

--- a/styles/pages/Bonuses.module.css
+++ b/styles/pages/Bonuses.module.css
@@ -106,7 +106,7 @@
 .filterControls {
     display: flex;
     flex-direction: row;
-    gap: 24px;
+    gap: 48px;
 }
 
 .filterControlsItem {
@@ -114,7 +114,6 @@
     align-items: center;
     justify-content: center;
     border-radius: 30px;
-    padding: 12px 24px;
     text-align: left;
     font: normal normal 500 15px/17px Samsung Sans;
     letter-spacing: 0px;
@@ -125,6 +124,7 @@
 
 .filterControlsItem.active {
     background-color: #7F3FFC;
+    padding: 12px 24px;
     color: white;
 }
 
